--- a/foundations/03-grouping-selectors/index.html
+++ b/foundations/03-grouping-selectors/index.html
@@ -7,9 +7,9 @@
   <title>Grouping Selectors</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body class="button">
-  <button>Click Me!</button>
-  <button class="button">No, Click Me!<br>
+<body>
+  <button class="first_button">Click Me!</button>
+  <button class="second_button">No, Click Me!<br>
   </button>
 </body>
 </html>
